fix: ui gap in search/pagination

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -350,11 +350,14 @@ header.profile-wrapper h1 {
 .pagination {
   color: var(--text-color);
   font-family: v.$font-family-base;
+  font-size: 1rem;
   justify-content: space-evenly;
   margin-top: 3rem;
+  margin-bottom: 0;
   padding-top: 1rem;
   padding-left: 0;
   list-style: none;
+  display: flex;
 
   @include bp.lg {
     font-size: 0.85rem;
@@ -390,6 +393,7 @@ header.profile-wrapper h1 {
       width: 1.65rem;
       height: 1.65rem;
       border: 0;
+      font-size: 1rem;
       background-color: inherit;
 
       &::before {
@@ -424,6 +428,7 @@ header.profile-wrapper h1 {
 
     &.disabled {
       cursor: not-allowed;
+      pointer-events: none;
 
       .page-link {
         color: rgba(108, 117, 125, 0.57);
