--- a/_sass/pages/_search.scss
+++ b/_sass/pages/_search.scss
@@ -35,7 +35,6 @@ search {
 }
 
 #search-result-wrapper {
-  display: none;
   display: flex;
   height: 100%;
   width: 100%;
@@ -58,7 +57,6 @@ search {
   }
 
   @include bp.lg {
-    display: flex;
     justify-content: start !important;
     max-width: v.$main-content-max-width;
   }
